Add sidebar components

--- a/src/content/docs/components/sheet.mdx
+++ b/src/content/docs/components/sheet.mdx
@@ -4,8 +4,8 @@ slug: components/sheet
 description: A component that displays a sheet.
 prev: components/separator
 prevLabel: Separator
-next: components/skeleton
-nextLabel: Skeleton
+next: components/sidebar
+nextLabel: Sidebar
 docs: https://kobalte.dev/docs/core/components/dialog
 apiReference: https://kobalte.dev/docs/core/components/dialog#api-reference
 ---
