--- a/src/content/docs/components/skeleton.mdx
+++ b/src/content/docs/components/skeleton.mdx
@@ -2,8 +2,8 @@
 title: Skeleton
 slug: components/skeleton
 description: Use to show a placeholder while content is loading.
-prev: components/sheet
-prevLabel: Sheet
+prev: components/sidebar
+prevLabel: Sidebar
 next: components/slider
 nextLabel: Slider
 docs: https://kobalte.dev/docs/core/components/skeleton
