Add target to registry files

--- a/src/content/docs/components/sidebar.mdx
+++ b/src/content/docs/components/sidebar.mdx
@@ -7,3 +7,9 @@ prevLabel: Sheet
 next: components/skeleton
 nextLabel: Skeleton
 ---
+
+import SidebarCode from "/src/registry/items/ui/sidebar.tsx?raw";
+
+## Installation
+
+<InstallationTabs name="sidebar" code={SidebarCode} />
