--- a/src/content/docs/components/carousel.mdx
+++ b/src/content/docs/components/carousel.mdx
@@ -56,7 +56,7 @@ import {
 
 To set the size of the items, you can use the `basis` utility class on the `CarouselItem` component.
 
-<PreviewTabs demoCode={CarouselSizesCode}>
+<PreviewTabs demoCode={CarouselSizesCode} class="mt-4">
   <CarouselSizesDemo client:only="solid-js" />
 </PreviewTabs>
 
@@ -86,7 +86,7 @@ To set the size of the items, you can use the `basis` utility class on the `Caro
 
 To change the orientation of the carousel, you can use the `flex-col` utility class on the `CarouselContent` component.
 
-<PreviewTabs demoCode={CarouselOrientationCode}>
+<PreviewTabs demoCode={CarouselOrientationCode} class="mt-4">
   <CarouselOrientationDemo client:only="solid-js" />
 </PreviewTabs>
 
