--- a/src/content/docs/components/drawer.mdx
+++ b/src/content/docs/components/drawer.mdx
@@ -63,6 +63,6 @@ import {
 
 You can combine the `Dialog` and `Drawer` components to create a responsive dialog. This renders a `Dialog` component on desktop and a `Drawer` component on mobile.
 
-<PreviewTabs demoCode={DrawerResponsiveCode}>
+<PreviewTabs demoCode={DrawerResponsiveCode} class="mt-4">
   <DrawerResponsiveDemo client:only="solid-js" />
 </PreviewTabs>
