--- a/src/content/docs/components/callout.mdx
+++ b/src/content/docs/components/callout.mdx
@@ -27,14 +27,8 @@ import { Callout, CalloutContent, CalloutTitle } from "~/components/ui/callout";
 ```
 
 ```tsx
-<Accordion collapsible>
-  <AccordionItem value="item-1">
-    <AccordionTrigger>Item 1</AccordionTrigger>
-    <AccordionContent>Content for item 1.</AccordionContent>
-  </AccordionItem>
-  <AccordionItem value="item-2">
-    <AccordionTrigger>Item 2</AccordionTrigger>
-    <AccordionContent>Content for item 2.</AccordionContent>
-  </AccordionItem>
-</Accordion>
+<Callout variant="success">
+  <CalloutTitle>Success</CalloutTitle>
+  <CalloutContent>This is a success callout</CalloutContent>
+</Callout>
 ```
