Sidebar and Site search

--- a/src/content/docs/components/carousel.mdx
+++ b/src/content/docs/components/carousel.mdx
@@ -4,8 +4,8 @@ slug: components/carousel
 description: A component that displays a carousel.
 prev: components/card
 prevLabel: Card
-next: components/checkbox
-nextLabel: Checkbox
+next: components/charts
+nextLabel: Charts
 docs: https://www.embla-carousel.com/get-started/solid/
 apiReference: https://www.embla-carousel.com/api/
 ---
