--- a/src/content/docs/components/checkbox.mdx
+++ b/src/content/docs/components/checkbox.mdx
@@ -2,8 +2,8 @@
 title: Checkbox
 slug: components/checkbox
 description: A control that allows the user to toggle between checked and not checked.
-prev: components/carousel
-prevLabel: Carousel
+prev: components/charts
+prevLabel: Charts
 next: components/collapsible
 nextLabel: Collapsible
 docs: https://kobalte.dev/docs/core/components/checkbox
